# imagine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  resource.qrc
libs/ConsoleArtLib/consoleartlib/: console_art_lib.h  image_formats.hpp
libs/ConsoleArtLib/consoleartlib/image_tools/: ascii_converter.h  dithering.h  filter.h  image_tools.h  simple_edit.h
libs/ConsoleArtLib/consoleartlib/images/base/: image.h
libs/ConsoleArtLib/consoleartlib/images/formats/: image_bmp.h  image_dcx.h  image_gif.h  image_hdr.h  image_jpg.h  image_pcx.h  image_png.h  image_ppm.h  image_tga.h
libs/ConsoleArtLib/consoleartlib/images/interfaces/: ianimated.hpp  imulti_page.hpp
libs/ConsoleArtLib/consoleartlib/images/utils/: pixels.hpp
libs/ConsoleLib/consolelib/: console_lib.h  consoles.hpp  delegate.hpp  output.hpp
libs/ConsoleLib/consolelib/consoles/: default_console.h  iconsole.hpp  unix_console.h  windows_console.h
libs/ConsoleLib/consolelib/math/: statistic.h  statistic.tpp
libs/ConsoleLib/consolelib/math/base/: distribution.h
libs/ConsoleLib/consolelib/math/distributions/: binomial_distribution.h  poissons_distribution.h
libs/ConsoleLib/consolelib/math/types/: real_number.h
libs/ConsoleLib/consolelib/tools/: argument_parser.h  color_tools.h  console_menu.h  console_tools.h  data_tools.h  file_tools.h  script_map.h  time_tools.h
src/: MainSource.cpp  main_source.cpp
src/consoleArt/controller/: ControllerQt.cpp  ControllerQt.h
src/consoleArt/gui/qt/: MainWindow.cpp  MainWindow.h
src/imagine/abstract/: AbstractAsciiPrinter.cpp  AbstractAsciiPrinter.h  AbstractNotifier.cpp  AbstractNotifier.h  AbstractProgressBar.cpp  AbstractProgressBar.h  AbstractState.cpp  AbstractState.h  abstract_ascii_printer.cpp  abstract_ascii_printer.h  abstract_notifier.cpp  abstract_notifier.h
src/imagine/controller/: controller.cpp  controller.h  controller_qt.cpp  controller_qt.h
src/imagine/interfaces/: IMenu.hpp
src/imagine/qt/: main_window.cpp  main_window.h
src/imagine/tools/: GeneralTools.hpp  general_tools.hpp
